# flight_prediction

./: .gitignore  Makefile  README.md  pyproject.toml
archive/web/: 20230727T195159380.att.6525660390789911.html  20230727T195200167.att.293480986678493.html  20240126T152424109.att.293683146668700.html
archive_russian_dude/: Giai-doan-du-doan-quy-dao-AI.docx
archive_russian_dude/notebook/: 20240222T171140176.att.1059986078626345.ipynb  20240222T171140448.att.281203131489843.ipynb  data_preprocessing_v1.ipynb
archive_russian_dude/web/: 20230731T162616289.att.3421382968076790.html  20240202T094205709.att.794416515844722.html  20240222T144440860.att.330556609410880.html
archive_trongan_work/modules/: feature_engineering.py
archive_trongan_work/v1/modules_v1/: data_module.py  data_preprocessing.py  file_handler.py  training.py
archive_trongan_work/v1/notebook_v1/: eda.ipynb  training.ipynb
data/excel_raw/: 20230713T153526004.att.672322581406152.xlsx
modules/: feature_engineering.py  models.py  training.py  visualize.py
notebook/: check_flight_path.ipynb  data_preprocessing.ipynb  eda.ipynb  flight_path_map.html  notebook.ipynb  notebook_3d_map.ipynb  training.ipynb  visualize.ipynb
output/: flight_path_map.html  flight_path_pydeck.html  output.html  run1.html  run2.html  run3.html  run4.html  test_map.html
test/: test.py  test_data_preprocessing.py  test_file_handler.py
