[tool.poetry]
name = "LDS0_K294_Online_VuTrongAn"
version = "0.2.0"
description = ""
authors = ["anvutrong <vta.bsn@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
numpy = "^1.26.4"
notebook = "^7.1.2"
matrepr = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
torchviz = "^0.0.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
torchmetrics = "^1.3.2"
plotly = "^5.21.0"
ipywidgets = "^8.1.2"
lightning = "^2.2.2"
tensorboard = "^2.16.2"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
gensim = "^4.3.2"
scipy = "1.12.0"
spacy = "^3.7.4"
dill = "^0.3.8"
yfinance = "^0.2.38"
mplfinance = "^0.12.10b0"
feature-engine = "^1.7.0"
torchtext= "^0.16.0+cpu"
torchvision = "^0.16.0"
transformers = "^4.40.2"
sentencepiece = "^0.2.0"
librosa = "^0.10.2.post1"
underthesea = "^6.8.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
openai = "^1.30.1"
tiktoken = "^0.7.0"
datasets = "^2.19.1"
pinecone-client = "^4.1.0"
rich = "^13.7.1"
polars = "^0.20.28"
pyspark = "^3.5.1"
scikit-learn-intelex = "^2024.4.0"
pypdf = "^4.2.0"
pypdf2 = "^3.0.1"
fitz = "^0.0.1.dev2"
pytesseract = "^0.3.10"
surprise = "^0.1"
textblob = "^0.18.0.post0"
emoji = "^2.12.1"
translators = "^5.9.2"
unicodedata2 = "^15.1.0"
lmdb = "^1.4.1"
nltk = "^3.8.1"
xgboost = "^2.0.3"
wordcloud = "^1.9.3"
imblearn = "^0.0"
streamlit = "^1.35.0"
squarify = "^0.4.3"
folium = "^0.17.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
